HIVE-14671 : merge master into hive-14535 (Wei Zheng)